--- a/index.html
+++ b/index.html
@@ -14,23 +14,42 @@
 <body>
 
   <div class="container">
+
     <div class="container__text">
-      We're coming soon
-
-      Hello fellow shoppers! We're currently building our new fashion store.
-      Add your email below to stay up-to-date with announcements and our launch deals.
-
-      Email Address
+      <img class="container__text--logo" src="./images/logo.svg" alt="logo base apparel">
+      <div class="container__text--title">
+        <h1 id="text__title-first">We're</h1>
+        <h1 id="text__title-second">coming<br>soon</h1>
+      </div>
+      <div class="container__text--subtitle">
+        Hello fellow shoppers! We're currently building our new fashion store.
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </div>
+      <div class="container__text--input">
+        <form>
+          <div>
+            <input id="email-input" type="text" name="email" placeholder="Email Address" required>
+            <i><img id="input-icon" src="./images/icon-error.svg" alt="icon-error"></i>
+            <button type="button" id="email-btn">
+              <img class="text__input--img" src="./images/icon-arrow.svg" alt="arrow icon">
+            </div>
+            <span id="span__error">Please provide a valid email</span>
+          </button>
+        </form>
+      </div>
     </div>
+
     <div class="container__img">
       <img src="./images/hero-desktop.jpg" alt="girl posing">
     </div>
   </div>
 
-
   <footer>
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">camiblnpa</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+      href="#">camiblnpa</a>.
   </footer>
+
+  <script src="functions.js"></script>
 </body>
 
 </html>
