--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <i><img id="input-icon" src="./images/icon-error.svg" alt="icon-error"></i>
             <button type="button" id="email-btn">
               <img class="text__input--img" src="./images/icon-arrow.svg" alt="arrow icon">
-            </div>
-            <span id="span__error">Please provide a valid email</span>
+          </div>
+          <span id="span__error">Please provide a valid email</span>
           </button>
         </form>
       </div>
@@ -45,8 +45,9 @@
   </div>
 
   <footer>
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
-      href="#">camiblnpa</a>.
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+    <p>Coded by <a href="https://github.com/camiblnpa" target="_blank">camiblnpa</a></p>
   </footer>
 
   <script src="functions.js"></script>
